fix(ui): dark mode init issues

--- a/src/pages/live-apy/styles/LiveApy.module.css
+++ b/src/pages/live-apy/styles/LiveApy.module.css
@@ -2,7 +2,7 @@
 .container {
   max-width: 1538px;
   margin: 0 auto;
-  padding: 1.5rem 1rem;
+  padding-top: 1.5rem;
   margin-top: 10px;
 }
 
